--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<script src="storage.js"></script>
-    <script src="app.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
+
