--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 </div>
 
 <header>
-  <div onclick="resetarPerfil()" style="cursor:pointer">
-    <h1 id="titulo-app">🎬 Cine Pipoca</h1>
-    <span style="font-size:10px; color:#3b82f6;">Trocar Perfil ▼</span>
+  <div onclick="resetarPerfil()" style="cursor:pointer; display: flex; align-items: center; gap: 8px;">
+    <h1 id="titulo-app" style="margin:0; font-size: 20px; color: #3b82f6;">🎬 Cine Pipoca</h1>
+    <span style="font-size: 10px; color: #3b82f6; opacity: 0.7;">▼</span>
   </div>
+  
   <nav>
     <button onclick="navegar('home')">Home</button>
     <button onclick="navegar('series')">Séries</button>
@@ -58,11 +59,11 @@
         <input id="nome" placeholder="Nome do filme ou série">
         <input id="imagem" placeholder="URL da Imagem (Poster)">
         
-        <label style="font-size: 12px; color: #3b82f6; display: block; margin-top:10px;">Para quem é?</label>
-        <select id="dono">
-            <option value="casal">🍿 Casal</option>
-            <option value="arthur">🤵‍♂️ Arthur</option>
-            <option value="day">👰‍♀️ Day</option>
+        <label style="font-size: 11px; color: #3b82f6; margin-top: 10px; display: block;">Para qual perfil?</label>
+        <select id="dono" style="margin-bottom: 15px; width: 100%;">
+            <option value="casal">🍿 Casal (Ver Juntos)</option>
+            <option value="arthur">🤵‍♂️ Só Arthur</option>
+            <option value="day">👰‍♀️ Só Day</option>
         </select>
 
         <div class="select-group">
@@ -85,12 +86,12 @@
         <div id="campos-finalizacao" style="display:none;">
             <div class="dual-rating-input">
                 <label>🤵 Nota Arthur (1-5):</label>
-                <input id="notaA" type="number" step="0.5" min="1" max="5" placeholder="5">
+                <input id="notaA" type="number" step="0.5" min="1" max="5">
                 <input id="comA" placeholder="Comentário Arthur">
             </div>
             <div class="dual-rating-input">
                 <label>👰 Nota Daiane (1-5):</label>
-                <input id="notaD" type="number" step="0.5" min="1" max="5" placeholder="5">
+                <input id="notaD" type="number" step="0.5" min="1" max="5">
                 <input id="comD" placeholder="Comentário Daiane">
             </div>
         </div>
