--- a/index.html
+++ b/index.html
@@ -102,5 +102,12 @@
 </div>
 
 <script type="module" src="app.js"></script>
+  <div id="dado-flutuante" class="floating-dice" onclick="sortearFilme()">🎲</div>
+
+<div id="modal-sorteio" class="overlay-sorteio" onclick="fecharSorteio(event)">
+    <div id="container-sorteado" class="card-sorteado">
+        </div>
+</div>
 </body>
 </html>
+
