--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
   </div>
   
   <nav>
-    <button onclick="navegar('home')">Home</button>
-    <button onclick="navegar('series')">Séries</button>
-    <button onclick="navegar('filmes')">Filmes</button>
-    <button onclick="navegar('quero')">Quero Assistir ⭐</button>
-    <button onclick="abrirModal('add')" class="btn-add-menu">+</button>
-  </nav>
+        <button onclick="navegar('home')">Home</button>
+        <button onclick="navegar('series')">Séries</button>
+        <button onclick="navegar('filmes')">Filmes</button>
+        <button onclick="navegar('quero')">Quero</button>
+        <button class="btn-add-flutuante" onclick="abrirModal()">+</button>
+        <button class="btn-sair" onclick="resetarPerfil()">🚪</button>
+    </nav>
 </header>
 
 <section class="search-box">
@@ -110,4 +111,5 @@
 </div>
 </body>
 </html>
+
 
