--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
     <span style="font-size: 10px; color: #3b82f6; opacity: 0.7;">▼</span>
   </div>
   
-  <nav>
+ <nav>
         <button onclick="navegar('home')">Home</button>
         <button onclick="navegar('series')">Séries</button>
         <button onclick="navegar('filmes')">Filmes</button>
         <button onclick="navegar('quero')">Quero</button>
-        <button class="btn-add-flutuante" onclick="abrirModal()">+</button>
-        <button class="btn-sair" onclick="resetarPerfil()">🚪</button>
+        <button class="btn-add-novo" onclick="abrirModal('add')">+</button>
     </nav>
 </header>
 
@@ -111,5 +110,6 @@
 </div>
 </body>
 </html>
+
 
 
