--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
         </div>
 
         <div id="campos-finalizacao" style="display:none; margin-top:10px; border-top:1px solid #334155; padding-top:10px;">
-            <p style="font-size:12px; color:#94a3b8; margin-bottom:5px;">Notas (1 a 5):</p>
-            <div class="flex-row">
-                <input id="notaA" type="number" placeholder="Nota Arthur" min="1" max="5">
-                <input id="notaD" type="number" placeholder="Nota Day" min="1" max="5">
-            </div>
-        </div>
+    <p style="font-size:12px; color:#94a3b8; margin-bottom:5px;">Notas (1 a 5):</p>
+    <div class="flex-row">
+        <input id="notaA" type="number" placeholder="Nota Arthur" min="1" max="5">
+        <input id="notaD" type="number" placeholder="Nota Day" min="1" max="5">
+    </div>
+    <label style="margin-top:10px; display:block;">Comentário do Casal:</label>
+    <textarea id="comentario" rows="3" style="width:100%; background:#0f172a; color:white; border:1px solid #334155; border-radius:8px; padding:10px; box-sizing:border-box;"></textarea>
+</div>
 
         <div class="modal-btns">
             <button class="btn-primary" onclick="adicionar()">Salvar no Firebase</button>
@@ -125,3 +127,4 @@
 <script type="module" src="app.js"></script>
 </body>
 </html>
+
