--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <span id="letra-perfil">?</span> 
             </div>
             
-            <div class="perfil-dropdown-menu" id="dropdownPerfil">
-                <div class="perfil-item" onclick="trocarUsuario('arthur')">🤵‍♂️ Arthur</div>
-                <div class="perfil-item" onclick="trocarUsuario('day')">👰‍♀️ Day</div>
-            </div>
+           <div class="perfil-dropdown-menu" id="dropdownPerfil">
+    <div class="perfil-item" onclick="selecionarPerfil('arthur')">🤵‍♂️ Arthur</div>
+    <div class="perfil-item" onclick="selecionarPerfil('day')">👰‍♀️ Day</div>
+</div>
         </div>
     </nav>
 </header>
@@ -156,6 +156,7 @@
 <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
