--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </div>
 
 <header>
-    <div onclick="resetarPerfil()" style="cursor:pointer;">
-        <h1 id="titulo-app">🎬 Cine Pipoca</h1>
-    </div>
+    <div onclick="resetarPerfil()" style="cursor:pointer;" class="logo-cinepipoca">
+    <img src="logo.png" alt="Logo Cine Pipoca" id="logo-app">
+</div>
     
     <nav>
         <button onclick="navegar('home')">Home</button>
@@ -156,6 +156,7 @@
 <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
