--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button onclick="navegar('series')">Séries</button>
         <button onclick="navegar('filmes')">Filmes</button>
         <button onclick="navegar('quero')">Quero</button>
-        <button class="btn-add-novo" onclick="abrirModal('add')">+</button>
+        <button class="btn-adicionar-inline" onclick="abrirModal('add')">+</button>
         
         <div class="perfil-container-moderno">
             <div class="perfil-bolinha-btn" onclick="toggleMenuPerfil()" id="perfilBtn">
@@ -156,6 +156,7 @@
 <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
